# vecdb-hnsw

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json  post-create.sh
benchmarks/: README.md  benchmark_search.py
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-build/src/cpp/: Makefile  cmake_install.cmake
docs/: BENCHMARKS.md  DESIGN.md  ORCHESTRATION.md  PRD.md  SETUP.md  project-description.md
examples/: 01_basic_usage.py  02_distance_metrics.py  03_text_embeddings.py  04_multiple_collections.py  05_crud_operations.py  06_numpy_integration.py  README.md
scripts/: verify-environment.sh
src/cpp/: CMakeLists.txt  README.md  README.md:Zone.Identifier  bindings.cpp  distance.hpp  hnsw_index.hpp  stub.cpp
src/python/vecdb/: __init__.py  _hnsw_mock.py  _version.py  collection.py  exceptions.py  persistence.py  vecdb.py
src/python/vecdb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/cpp/: README.md
tests/python/: test_collection.py  test_hnsw_mock.py  test_integration.py  test_persistence.py  test_setup.py  test_vecdb.py
